# ai-pipeline-core

./: .gitignore  .vulture_whitelist.py  CLAUDE.md  Makefile  README.md  pyproject.toml
.ai-docs/: README.md  database.md  deployment.md  documents.md  exceptions.md  llm.md  logger.md  observability.md  pipeline.md  prompt_compiler.md  replay.md  settings.md
.github/workflows/: ci.yml  manual-release.yml  release.yml  reusable-quality-checks.yml
.semgrep/: code_hygiene.yml
ai_pipeline_core/: __init__.py  _base_exceptions.py  _codec.py  _execution_context_state.py  _lifecycle_events.py  _token_estimates.py  exceptions.py  settings.py
ai_pipeline_core/_llm_core/: _validation.py  client.py  model_response.py  types.py
ai_pipeline_core/database/: __init__.py  _documents.py  _factory.py  _hydrate.py  _json_helpers.py  _memory.py  _protocol.py  _serialization.py  _sorting.py  _types.py
ai_pipeline_core/database/clickhouse/: __init__.py  _backend.py  _connection.py  _ddl.py  _rows.py
ai_pipeline_core/database/filesystem/: __init__.py  _backend.py  _paths.py  _validation.py
ai_pipeline_core/database/snapshot/: __init__.py  _download.py  _spans.py  _summary.py
ai_pipeline_core/deployment/: _cli.py  _deployment_runtime.py  _helpers.py  _prefect.py  _pubsub.py  _resolve.py  _types.py  base.py  deploy.py  remote.py
ai_pipeline_core/docs_generator/: cli.py  guide_builder.py
ai_pipeline_core/documents/: __init__.py  _context.py  _mime_type.py  attachment.py  document.py  exceptions.py  utils.py
ai_pipeline_core/llm/: _conversation_messages.py  _images.py  _substitutor.py  _tool_loop.py  conversation.py
ai_pipeline_core/logger/: __init__.py  _buffer.py  _handler.py  _types.py  logging_config.py
ai_pipeline_core/observability/: _laminar_sink.py  cli.py
ai_pipeline_core/pipeline/: __init__.py  _execution_context.py  _flow.py  _parallel.py  _runtime_sinks.py  _span_sink.py  _span_types.py  _task.py  _task_cache.py  _task_runtime.py  _traced.py  _track_span.py  _type_validation.py  gather.py  limits.py
ai_pipeline_core/prompt_compiler/: cli.py  render.py  spec.py
ai_pipeline_core/replay/: __init__.py  __main__.py  _adapters.py  _execute.py  _experiment.py  cli.py
examples/: showcase.py  showcase_database.py  showcase_prompt_compiler.py  showcase_remote_deployment.py  showcase_replay.py
scripts/: check_ai_docs_freshness.sh
tests/: conftest.py  test_codec.py  test_settings_singleton.py  test_smoke.py
tests/_llm_core/: test_client.py
tests/database/: test_clickhouse.py  test_clickhouse_integration.py  test_protocol.py  test_span_download.py  test_span_filesystem.py  test_span_memory.py  test_span_summary.py  test_types.py
tests/deployment/: conftest.py  test_cli.py  test_database_wiring.py  test_deploy.py  test_deployment_base.py  test_event_schemas.py  test_execution_log_flush.py  test_progress.py  test_publisher_wiring.py  test_publishers.py  test_pubsub.py  test_pubsub_chain_context.py  test_pubsub_cloudevents.py  test_pubsub_event_fields.py  test_pubsub_progress.py  test_pubsub_resume.py  test_pubsub_task_results.py  test_remote_deployment.py  test_resolve.py  test_resume_document_loading.py  test_resume_logic.py  test_task_failure_events.py
tests/documents/: test_binary_serialization.py  test_context.py  test_document_attachment_serialization.py  test_document_attachments.py  test_document_core.py  test_document_enforcement.py  test_document_serialization_metadata.py  test_document_sources.py  test_document_tokens.py  test_files_enum_patterns.py  test_files_enum_type_safety.py  test_hashing.py  test_inline_summaries.py  test_is_document_sha256.py  test_typed_content.py
tests/integration/: test_llm_integration.py  test_pipeline_lifecycle.py  test_replay_integration.py
tests/llm/: conftest.py  test_conversation_messages.py  test_conversation_tools.py  test_model_response.py  test_model_response_features.py  test_tool_loop.py
tests/logging/: test_execution_log_runtime.py  test_logging_config.py
tests/observability/: test_laminar_sink.py  test_trace_cli_spans.py
tests/pipeline/: conftest.py  test_conversation_recorder.py  test_execution_context.py  test_flow_storage.py  test_limits.py  test_options.py  test_parallel_primitives.py  test_span_sink.py  test_static_validation.py  test_task_constraints.py  test_task_lifecycle.py  test_task_nodes.py  test_task_resilience.py  test_traced_operation.py
tests/prompt_compiler/: conftest.py  test_cli.py  test_components.py  test_render.py  test_spec.py
tests/replay/: conftest.py  test_adapters.py  test_cli_usage.py  test_execute_span.py  test_experiment.py  test_replay_portability.py
