[project]
name = "ai-pipeline-core"
version = "0.15.0"
description = "Core utilities for AI-powered processing pipelines using prefect"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
authors = [
    {name = "ResearchTech Inc.", email = "bartosz@research.tech"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.28.1",
    "Jinja2>=3.1.6",
    "openai>=2.16.0",
    "Pillow>=12.1.0",
    "prefect>=3.6.15",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.12.5",
    "pypdf>=5.0.0",
    "python-magic>=0.4.27",
    "ruamel.yaml>=0.19.1",
    "tiktoken>=0.12.0",
    "lmnr>=0.7.0",
    "clickhouse-connect>=0.10.0",
    "prefect-gcp>=0.6.15",
    "google-cloud-pubsub>=2.0",
]

[project.scripts]
ai-prompt-compiler = "ai_pipeline_core.prompt_compiler.cli:main"
ai-pipeline-deploy = "ai_pipeline_core.deployment.deploy:main"
ai-replay = "ai_pipeline_core.replay.cli:main"
ai-trace = "ai_pipeline_core.observability.cli:main"

[project.urls]
Homepage = "https://github.com/bbarwik/ai-pipeline-core"
Repository = "https://github.com/bbarwik/ai-pipeline-core"
Issues = "https://github.com/bbarwik/ai-pipeline-core/issues"

[project.optional-dependencies]
dev = [
    "basedpyright==1.37.3",
    "bump2version>=1.0.1",
    "interrogate==1.7.0",
    "pre-commit>=4.3.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-testmon>=2.2.0",
    "pytest-xdist>=3.8.0",
    "pytest>=8.4.1",
    "ruff==0.15.2",
    "testcontainers[clickhouse,google]>=4.0.0",
    "vulture==2.14",
    "pylint>=3.0.0",
]
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = '''
  --quiet
  --tb=short
  --testmon
  -m 'not integration and not clickhouse and not pubsub and not pubsub_live'
'''
strict = true
testpaths = ["tests"]
markers = [
    "integration: tests requiring real LLM API keys (auto-skipped when OPENAI_API_KEY not set)",
    "clickhouse: tests requiring a ClickHouse Docker container (auto-skipped when Docker unavailable)",
    "pubsub: tests requiring GCP Pub/Sub emulator via testcontainers (auto-skipped when Docker unavailable)",
    "pubsub_live: tests requiring real GCP Pub/Sub (needs PUBSUB_PROJECT_ID)",
    "ai_docs: test included as example in .ai-docs/ guides",
]

[tool.coverage.run]
source = ["ai_pipeline_core"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false

[tool.ruff]
# Configuration for the Ruff linter and formatter
line-length = 160
target-version = "py314"
preview = true  # Required for DOC (pydoclint-derived) rules
exclude = [".tmp", "build", "dist", ".venv", "venv", "__pycache__", "scripts"]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "I",       # isort
    "TID",     # flake8-tidy-imports (was TID252 only — now full TID to enable TID251 banned-api)
    "T20",     # print detection
    "D",       # pydocstyle
    "DOC",     # pydoclint
    "B",       # flake8-bugbear — mutable defaults, loop var capture
    "SIM",     # flake8-simplify — redundant control flow
    "ARG",     # flake8-unused-arguments
    "RUF",     # ruff-specific — RUF012 mutable class attrs, RUF100 unused noqa
    "UP",      # pyupgrade — Python 3.14+ idioms
    "PERF",    # perflint — performance anti-patterns
    "C4",      # flake8-comprehensions
    "FBT",     # flake8-boolean-trap
    "S",       # flake8-bandit — security baseline
    "C90",     # mccabe complexity
    "PT",      # flake8-pytest-style
    "PLC",     # pylint conventions (subsumes PLC0415)
    "PLE",     # pylint errors
    "PLW",     # pylint warnings
    "PLR",     # pylint refactoring
    "PIE",     # flake8-pie
    "RET",     # flake8-return
    "A",       # flake8-builtins — shadowing builtins
    "ASYNC",   # flake8-async — blocking calls in async
    "TRY",     # tryceratops — exception patterns
    "BLE",     # blind-except — catches 'except Exception:' without logging/re-raising
]
ignore = [
    "DOC201", "DOC501", "DOC502", "D105",
    "S101",    # assert used — intentional in non-test code
    "RET504",  # unnecessary variable before return — readability preference
    "ARG002",  # unused method argument — Pydantic validators have required signatures
    "FBT001",  # boolean positional arg — too strict for internal helpers
    "PLR2004", # magic value in comparison — domain thresholds are clearer inline
    "PLR0913", # too many arguments — some constructors legitimately need many params
    "TRY003",  # long exception messages — project uses detailed errors by design
    "D102",    # Protocol methods — documented by class docstring
    "D107",    # __init__ docstring — interrogate handles with ignore-init-method (3/3)
    "D417",    # missing arg descriptions — type hints suffice (3/3)
    "SIM108",  # ternary — reduces readability for multi-line (3/3)
    "C420",    # dict.fromkeys — mutable default trap with adjacent code (2-1)
    "TRY301",  # abstract raise — raise IS the validation in try/except (2-1)
    "TRY300",  # move to else — changes error handling semantics (2-1)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-public-methods = 30

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["T20", "D", "DOC", "PLC0415", "PLC1901", "PLC2701", "S", "ARG", "FBT", "PLW", "PLR", "TRY", "SIM", "ASYNC", "C4", "B017", "B018", "E402", "I001", "PT011", "PT012", "PT017", "PT018", "RUF012", "RUF015", "RUF029", "RUF059", "RUF069", "TID251", "A002"]
"examples/**/*.py" = ["D", "DOC", "PLC0415", "S", "ARG", "T20", "RUF029", "C901", "PLR0914", "PLR0915", "PLR6301", "A002"]
"dependencies_docs/**/*.py" = ["D", "DOC", "PLC0415"]
".vulture_whitelist.py" = ["B018", "E402", "F401", "F821", "D", "PLC2701"]
"ai_pipeline_core/__init__.py" = ["RUF067", "TID251"]
"ai_pipeline_core/testing.py" = ["TID251"]
"ai_pipeline_core/deployment/_cli.py" = ["TID251", "PLR0912", "PLR0914", "PLR0915", "UP047"]
"ai_pipeline_core/deployment/_helpers.py" = ["PLC0415", "BLE001", "TID251"]
"ai_pipeline_core/prompt_compiler/cli.py" = ["T201", "C901", "PLR0912", "PLR0915", "TID251"]
"ai_pipeline_core/deployment/base.py" = ["T20", "C901", "PLR0912", "PLR0914", "PLR0915", "PLR0917", "PLR6301", "PLC0415", "UP046", "BLE001", "TID251", "ARG001"]
"ai_pipeline_core/deployment/_prefect.py" = ["TID251", "BLE001", "PLR0917"]
"ai_pipeline_core/pipeline/limits.py" = ["BLE001", "ASYNC109", "TID251"]
"tests/pipeline/test_limits.py" = ["PLC2801"]
"ai_pipeline_core/deployment/deploy.py" = ["T20", "PLC0415", "PLC2701", "S404", "S602", "S603", "ASYNC", "C901", "PLR0912", "BLE001", "TID251"]
"ai_pipeline_core/deployment/remote.py" = ["UP046", "UP047", "TID251", "BLE001", "PLC0415", "ARG001", "PLR0914", "PLR0915"]
"ai_pipeline_core/deployment/_pubsub.py" = ["BLE001"]
"ai_pipeline_core/documents/document.py" = ["PLR0904"]
"ai_pipeline_core/database/_factory.py" = ["F821", "PLC0415"]
"ai_pipeline_core/_codec.py" = ["PLR0911"]
"ai_pipeline_core/database/clickhouse/_backend.py" = ["S608", "BLE001", "PLR0904", "PLR0911", "PLR0912", "C901", "PLR6301", "PERF401"]
"ai_pipeline_core/database/clickhouse/_connection.py" = ["S608"]
"ai_pipeline_core/database/filesystem/_backend.py" = ["PLR0904", "PLR6301", "PERF401"]
"ai_pipeline_core/database/_memory.py" = ["PLR0904", "PLR6301", "RUF029", "PERF401"]
"ai_pipeline_core/database/snapshot/_summary.py" = ["PLR6301", "PLR0912", "PLR0914", "PLR0917", "PERF401"]
"ai_pipeline_core/database/_documents.py" = ["PLC0415", "PERF401"]
"ai_pipeline_core/_llm_core/client.py" = ["PLR0911", "C901", "PLR0912", "PLR0915", "PLR0914", "PLR1702", "RUF005", "PLC2801", "UP047", "BLE001"]
"ai_pipeline_core/_llm_core/model_response.py" = ["UP046", "PLR6301", "PERF403", "BLE001"]
"ai_pipeline_core/llm/__init__.py" = ["TID252"]
"ai_pipeline_core/llm/tools.py" = ["A002"]  # execute(self, input) — intentional API matching OpenAI tool convention
"ai_pipeline_core/llm/_tool_loop.py" = ["BLE001"]  # tools are user code that can throw any exception
"ai_pipeline_core/llm/conversation.py" = ["RUF005", "PERF401", "FBT002", "UP035", "UP046", "PLC0415", "PLC2801", "PLR6301", "C901", "PLR0912", "PLR0914", "PLR0915", "PLR0917", "TID252", "BLE001"]
"ai_pipeline_core/llm/_substitutor.py" = ["BLE001", "C901", "PLR0911", "PLR0912", "PLR0914"]
"ai_pipeline_core/deployment/_resolve.py" = ["PLC0415", "C901", "PLR0915", "BLE001"]
"ai_pipeline_core/_llm_core/_validation.py" = ["BLE001"]
"ai_pipeline_core/llm/_images.py" = ["PLR0917", "BLE001"]
"ai_pipeline_core/pipeline/_task.py" = ["ARG003", "PLR0914", "PLR0915", "PLC2801"]
"ai_pipeline_core/pipeline/_type_validation.py" = ["BLE001"]
"ai_pipeline_core/deployment/_types.py" = ["RUF029"]
"ai_pipeline_core/replay/types.py" = ["PLC0415"]
"ai_pipeline_core/replay/_execute.py" = ["PLC0415"]
"ai_pipeline_core/replay/cli.py" = ["T201", "BLE001"]
"ai_pipeline_core/observability/cli.py" = ["T201", "BLE001", "PLC0415", "PLR0914"]
"ai_pipeline_core/logger/_buffer.py" = ["TID251"]
"ai_pipeline_core/logger/_handler.py" = ["TID251"]
"ai_pipeline_core/logger/logging_config.py" = ["TID251"]
"ai_pipeline_core/docs_generator/cli.py" = ["T20"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

[tool.ruff.lint.flake8-tidy-imports]
# Enforce relative imports within the same package
ban-relative-imports = "parents"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"logging".msg = "Use from ai_pipeline_core.logger import get_pipeline_logger instead of import logging"
"warnings".msg = "Use from ai_pipeline_core.logger import get_pipeline_logger for warnings instead of import warnings"
"prefect".msg = "Do not import Prefect directly. Use ai_pipeline_core.pipeline and ai_pipeline_core.deployment instead."
"prefect.testing.utilities.prefect_test_harness".msg = "Do not use prefect_test_harness in tests — it is already provided as a session-scoped fixture in tests/conftest.py. Each call starts a new Prefect server (~4s). Use the session fixture instead."

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.interrogate]
fail-under = 100
verbose = 1
exclude = ["tests", "examples", ".venv", "venv", "build", "dist", "ai_pipeline_core/_*.py", "ai_pipeline_core/**/_*.py"]
ignore-init-method = true
ignore-init-module = false
ignore-magic = true
ignore-module = false
ignore-nested-functions = true
ignore-nested-classes = true
ignore-overloaded-functions = true
ignore-private = true
ignore-property-decorators = true
ignore-semiprivate = true
ignore-setters = true

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["ai_pipeline_core"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".venv",
    "venv",
    "env",
    ".git",
    "build",
    "dist",
]
reportMissingImports = true
reportMissingTypeStubs = "warning"
reportUndefinedVariable = true
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
# Keep at "warning" — reportUnknown* are noisy due to third-party libs
reportUnknownParameterType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
reportAny = "information"
reportPrivateUsage = false
# New rules
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnusedExpression = "error"
reportUnreachable = "error"
reportDeprecated = "warning"
reportUnusedCoroutine = "error"
reportImplicitStringConcatenation = false

[tool.pylint.SIMILARITIES]
min-similarity-lines = 10
ignore-imports = true
ignore-comments = true
ignore-docstrings = true
ignore-signatures = true

[tool.bumpversion]
current_version = "0.15.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_pipeline_core"]
include = [
  "ai_pipeline_core/py.typed",
  "ai_pipeline_core/**/*.yml",
  "ai_pipeline_core/**/*.jinja2",
  "ai_pipeline_core/.ai-docs/*.md",
]

[tool.hatch.build.targets.sdist]
include = [
    "ai_pipeline_core/**/*.py",
    "ai_pipeline_core/py.typed",
    "ai_pipeline_core/**/*.yml",
    "ai_pipeline_core/**/*.jinja2",
    "ai_pipeline_core/.ai-docs/*.md",
    "tests/**/*.py",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
